--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <title>day1</title>
   </head>
   <body>
-    <h1>Information</h1>
+    <h1>WELCOME ABOARD!!<br>What may I interest you in, today?</h1>
+    <hr>
+    <nav>
+      <a href="about.html" target="_blank">ABOUT US</a>|
+      <a href="contact.html" target="_blank">CONTACT US</a>|
+      <a href="home.html" target="_blank">HOME</a>
+    </nav>
   </body>
 </html>
